--- a/bill_ar.html
+++ b/bill_ar.html
@@ -591,7 +591,8 @@
 
             try {
                 await fetch(SYNC_URL, { method: "POST", mode: "no-cors", body: JSON.stringify(payload) });
-                const msg = document.getElementById("syncMsg");
+                // FIXED: Changed ID to 'syncMsg' to match HTML
+                const msg = document.getElementById("syncMsg"); 
                 msg.innerText = "✔ Data Secured In Sheet";
                 msg.style.display = "block";
                 setTimeout(() => msg.style.display = "none", 2000);
