--- a/bill_ar.html
+++ b/bill_ar.html
@@ -605,7 +605,7 @@
                 });
 
                 const msg = document.getElementById("syncMsg"); 
-                msg.innerText = "✔ Data Secured In Sheet";
+                msg.innerText = "✔ Data Secured In Our Database";
                 msg.style.display = "block";
                 setTimeout(() => msg.style.display = "none", 2000);
             } catch (e) { console.error("Sync Error:", e); }
