--- a/feedback.html
+++ b/feedback.html
@@ -1,60 +1,97 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>AR Network House Feedback</title>
+
 <style>
 body {
+  margin: 0;
   font-family: Segoe UI, sans-serif;
   background: #eef2f7;
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  padding: 12px;
 }
+
 .card {
-  background: #fff;
+  background: #ffffff;
   max-width: 420px;
   width: 100%;
-  padding: 30px;
-  border-radius: 14px;
-  box-shadow: 0 10px 25px rgba(0,0,0,.1);
+  padding: 26px;
+  border-radius: 16px;
+  box-shadow: 0 12px 28px rgba(0,0,0,0.12);
 }
-h2 { text-align: center; color: #1a365d; }
-p{text-align: center;color: #000;}
-label { font-weight: 600; margin-top: 15px; display: block; }
+
+.brand-logo {
+  width: 90px;
+  display: block;
+  margin: 0 auto 14px;
+  border-radius: 12px;
+}
+
+h2 {
+  text-align: center;
+  color: #1a365d;
+  margin: 6px 0;
+}
+
+p {
+  text-align: center;
+  color: #333;
+  font-size: 14px;
+  margin-bottom: 18px;
+}
+
+label {
+  font-weight: 600;
+  margin-top: 14px;
+  display: block;
+}
+
 input, textarea {
-  width: 100%;
-  padding: 12px;
+  width: 95%;
+  padding: 14px;
   margin-top: 6px;
-  border-radius: 8px;
-  border: 1px solid #ddd;
+  border-radius: 10px;
+  border: 1px solid #dcdcdc;
+  font-size: 15px;
 }
+
 .stars {
   display: flex;
   flex-direction: row-reverse;
   justify-content: center;
-  gap: 8px;
+  gap: 10px;
   margin-top: 10px;
 }
-.stars input { display: none; }
+
+.stars input {
+  display: none;
+}
+
 .stars label {
-  font-size: 36px;
+  font-size: 38px;
   color: #ddd;
   cursor: pointer;
 }
+
 .stars input:checked ~ label,
 .stars label:hover,
 .stars label:hover ~ label {
   color: #f6ad55;
 }
+
 button {
   width: 100%;
-  margin-top: 20px;
-  padding: 14px;
+  margin-top: 22px;
+  padding: 16px;
   font-size: 16px;
-  font-weight: bold;
+  font-weight: 700;
   border: none;
-  border-radius: 8px;
+  border-radius: 12px;
   background: #1a365d;
   color: white;
   cursor: pointer;
@@ -63,13 +100,19 @@ button {
 </head>
 
 <body>
+
 <div class="card">
+
+  <img
+    src="https://github.com/arnetworkhouse-oss/ar-network-house/blob/main/ar%20logo.jpg?raw=true"
+    alt="AR Network House Logo"
+    class="brand-logo">
+
   <h2>AR Network House</h2>
-    <p>We value your feedback! Please rate your experience.</p>
-    <p>Please share your feedback based on your experience with our services in 2025.</p>
+  <p>Please rate your experience with our services.</p>
 
   <label>Your Name *</label>
-  <input id="name" required>
+  <input id="name" placeholder="Enter your name">
 
   <label>Rating *</label>
   <div class="stars">
@@ -99,24 +142,22 @@ function submitFeedback() {
     return;
   }
 
-  const payload = {
-    name: name,
-    rating: rating.value,
-    message: message,
-    userEmail: "",      // optional future enhancement
-    source: "Feedback"
-  };
-
   fetch(API_URL, {
     method: "POST",
     mode: "no-cors",
     headers: { "Content-Type": "application/json" },
-    body: JSON.stringify(payload)
+    body: JSON.stringify({
+      name: name,
+      rating: rating.value,
+      message: message,
+      source: "Feedback Page"
+    })
   });
 
   alert("Thank you for your feedback!");
   location.reload();
 }
 </script>
+
 </body>
 </html>
