--- a/feedback.html
+++ b/feedback.html
@@ -174,6 +174,12 @@ button {
   <textarea id="message" rows="4"></textarea>
 
   <button onclick="submitFeedback()">Submit Feedback</button>
+  <footer style="text-align:center;margin-top:20px;font-size:12px;opacity:.7;">
+            Feedback year <span id="year"></span> Contact us <a
+            href="https://arnetworkhouse.in/"><strong>
+            AR Network House.
+            </strong></a>
+</footer>
 </div>
 
 <!-- SUCCESS OVERLAY -->
@@ -246,6 +252,7 @@ function submitFeedback() {
 
   document.getElementById("successOverlay").style.display = "flex";
 }
+ document.getElementById("year").textContent = new Date().getFullYear();
 </script>
 
 </body>
