--- a/poke_match.html
+++ b/poke_match.html
@@ -742,7 +742,7 @@ button:disabled {
 <body>
   
     <div id="loader">
-  <h1 class="loader-title">Poké<span>Battle</span></h1>
+  <h1 class="loader-title">Poké<span>Match</span></h1>
 
   <div class="loader-bar">
     <div id="loader-progress"></div>
@@ -754,7 +754,8 @@ button:disabled {
 
     <div class="arena">
         <header>
-            <h1 id="status">Poké<span>Battle</span></h1>
+            <P>CLICK ON YOUR POKÉMON TO SELECT IT</P>
+            <h1 id="status">Poké<span>Match</span></h1>
             <button id="start-btn">FIND OPPONENT</button>
         </header>
 
@@ -804,7 +805,8 @@ button:disabled {
 
         <div id="log" class="battle-log">Welcome Trainer. Select your Pokémon to begin.</div>
         <footer class="global-footer">
-        <p>Game maintained by <a href="https://arnetworkhouse.in/" target="_blank" style="color:#010101;text-decoration:underline;">AR NETWORK HOUSE</a> |  </p>
+        <p>Game maintained by <a href="https://arnetworkhouse.in/" target="_blank" style="color:#78d7ff;text-decoration:underline;">AR NETWORK HOUSE</a> |</p>
+        <p>|  <a href="https://arnetworkhouse-oss.github.io/ar-network-house/more.html" target="_blank" style="color:#78d7ff;text-decoration:underline;">MORE GAMES </a>  | <a href="https://arnetworkhouse.in/" target="_blank" style="color:#78d7ff;text-decoration:underline;">RATE US</a>  |</p>
     </footer>
     </div>
     <audio id="sfx-hit" src="https://assets.mixkit.co/active_storage/sfx/2771/2771-preview.mp3"></audio>
@@ -1219,11 +1221,11 @@ document.getElementById('start-btn').onclick = async () => {
     p2 = await p2Promise;
 
     document.getElementById('p2-display').innerHTML = `<img src="${p2.img}" class="pokemon-img"><h2 class="pokemon-name">${p2.name}</h2><div class="type-badge">${p2.types.join(' / ')}</div>`;
-    document.getElementById('status').innerHTML = "BATTLE <span>START</span>";
+    document.getElementById('status').innerHTML = "MATCH <span>START</span>";
     gameActive = true;
     turn = 1;
     updateUI();
-    document.getElementById('log').innerText = "Battle Start! Select a move!";
+    document.getElementById('log').innerText = "MATCH Start! Select a move!";
 };
 
 document.getElementById('close-modal').onclick = () => document.getElementById('selection-modal').style.display = 'none';
