--- a/feedback_game.html
+++ b/feedback_game.html
@@ -166,7 +166,7 @@ button {
     <input type="radio" id="r1" name="rating" value="1"><label for="r1">★</label>
   </div>
 
-  <label>Select Project / Service (Optional)</label>
+  <label>Select Tool or Game Name (Optional)</label>
   <select id="pid">
     <option value="">-- Loading list… --</option>
   </select>
@@ -267,3 +267,4 @@ document.getElementById("year").textContent = new Date().getFullYear();
 
 </body>
 </html>
+
