--- a/poke_match.html
+++ b/poke_match.html
@@ -806,8 +806,8 @@ button:disabled {
         <div id="log" class="battle-log">Welcome Trainer. Select your Pokémon to begin.</div>
         <footer class="global-footer">
         <p>Game maintained by <a href="https://arnetworkhouse.in/" target="_blank" style="color:#78d7ff;text-decoration:underline;">AR NETWORK HOUSE</a> |</p>
-        <p>|  <a href="https://arnetworkhouse-oss.github.io/ar-network-house/more.html" target="_blank" style="color:#78d7ff;text-decoration:underline;">MORE GAMES </a>  | <a href="https://arnetworkhouse.in/" target="_blank" style="color:#78d7ff;text-decoration:underline;">RATE US</a>  |</p>
-    </footer>
+        <p>|  <a href="https://arnetworkhouse-oss.github.io/ar-network-house/more.html" target="_blank" style="color:#78d7ff;text-decoration:underline;">MORE GAMES </a>  | <a href="https://arnetworkhouse-oss.github.io/ar-network-house/feedback_game.html" target="_blank" style="color:#78d7ff;text-decoration:underline;">RATE US</a>  |</p>
+        </footer>
     </div>
     <audio id="sfx-hit" src="https://assets.mixkit.co/active_storage/sfx/2771/2771-preview.mp3"></audio>
     <audio id="sfx-ult" src="https://assets.mixkit.co/active_storage/sfx/1435/1435-preview.mp3"></audio>
